[gd_scene load_steps=3 format=3 uid="uid://bxds0kpdhjwqk"]

[ext_resource type="Script" path="res://Scripts/options_menu.gd" id="1_3mmi8"]
[ext_resource type="Theme" uid="uid://7f6ykoy6ljnn" path="res://Assets/UI/theme.tres" id="1_ikhgt"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3mmi8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ikhgt")
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 40

[node name="MusicButton" type="CheckButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ikhgt")
text = "        Music"
alignment = 1

[node name="SfxButton" type="CheckButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ikhgt")
text = "         Sounds"
alignment = 1

[node name="MenuButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ikhgt")
text = "Menu"

[connection signal="toggled" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MusicButton" to="." method="_on_music_button_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SfxButton" to="." method="_on_sfx_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
